[package]
name = "ihnet2"
version = "0.1.0"
edition = "2024"
authors = ["Logan-010"]
description = "Port forwarding. Anytime, anywhere, anyhow."

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = [
    "core-graphics",
    "windows-sys",
    "wayland-data-control",
] }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
iroh = { version = "0.98.1", default-features = false, features = [
    "fast-apple-datapath",
    "tls-ring",
    "portmapper",
    "address-lookup-mdns",
] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "fs",
    "signal",
    "macros",
    "net",
] }
tokio-util = { version = "0.7.18", default-features = false }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
rpath = false
overflow-checks = false
