[package]
name = "ihnet2"
version = "0.1.0"
edition = "2024"
authors = ["Logan-010"]
description = "Port forwarding. Anytime, anywhere, anyhow."

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = [
    "core-graphics",
    "windows-sys",
    "wayland-data-control",
] }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
hex = "0.4.3"
iroh = { version = "1.0.0", default-features = false, features = [
    "fast-apple-datapath",
    "tls-ring",
    "portmapper",
] }
iroh-mdns-address-lookup = "0.4.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "fs",
    "signal",
    "macros",
    "net",
    "io-util",
] }
tokio-util = { version = "0.7.18", default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yaml_serde = "0.10.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
rpath = false
overflow-checks = false
